Edited Analysis, Analysis.RowTemplate3, Data, Form1 and 1 more

--- a/client_code/Analysis/RowTemplate3/form_template.yaml
+++ b/client_code/Analysis/RowTemplate3/form_template.yaml
@@ -11,6 +11,8 @@ components:
     icon: ''}
   name: s1
   layout_properties: {column: RDIIXA}
+  data_bindings:
+  - {property: text, code: 'self.item[''s1'']'}
 - type: Label
   properties: {}
   name: s2
