--- a/client_code/Test/form_template.yaml
+++ b/client_code/Test/form_template.yaml
@@ -4,14 +4,71 @@ container:
   properties: {html: '@theme:standard-page.html'}
 components:
 - type: ColumnPanel
-  properties: {col_widths: '{}'}
+  properties: {role: outlined-card, tooltip: '', border: '', foreground: '', visible: true,
+    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
+    spacing_below: small, background: ''}
   name: content_panel
   layout_properties: {slot: default}
   components:
-  - type: Plot
-    properties: {}
-    name: plot_1
-    layout_properties: {grid_position: 'KUTVLS,XKZPMA'}
+  - type: ColumnPanel
+    properties: {role: outlined-card, tooltip: '', border: '', foreground: '', visible: true,
+      wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
+      spacing_below: small, background: ''}
+    name: column_panel_1
+    layout_properties: {grid_position: 'CEWQQC,JOUPRC'}
+    components:
+    - type: DataGrid
+      properties:
+        columns:
+        - {id: DYUPQR, title: Column 1, data_key: column_1}
+        - {id: FUDLJZ, title: Column 2, data_key: column_2}
+        - {id: ROOUBQ, title: Column 3, data_key: column_3}
+      name: data_grid_1
+      layout_properties: {grid_position: 'EFTOAA,HIRAGB'}
+      components:
+      - type: RepeatingPanel
+        properties: {spacing_above: none, spacing_below: none, item_template: Test.RowTemplate6}
+        name: repeating_panel_1
+        layout_properties: {}
+  - type: ColumnPanel
+    properties: {role: outlined-card, tooltip: '', border: '', foreground: '', visible: true,
+      wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
+      spacing_below: small, background: ''}
+    name: column_panel_2
+    layout_properties: {grid_position: 'CEWQQC,TZWVAF'}
+    components:
+    - type: DataGrid
+      properties:
+        role: null
+        columns:
+        - {id: GOXKCZ, title: Column 1, data_key: column_1, $$hashKey: 'object:5041'}
+        - {id: DCJIVT, title: Column 2, data_key: column_2, $$hashKey: 'object:5042'}
+        - {id: IVTYTY, title: Column 3, data_key: column_3, $$hashKey: 'object:5043'}
+        - {id: XCZAWR, title: Column 4, data_key: column_4, $$hashKey: 'object:5082'}
+        - {id: XMSTMT, title: Column 5, data_key: column_5, $$hashKey: 'object:5084'}
+        - {id: WBDMMY, title: Column 6, data_key: column_6, $$hashKey: 'object:5086'}
+        - {id: NIJGZM, title: Column 7, data_key: column_7, $$hashKey: 'object:5088'}
+        - {id: PHVIDF, title: Column 8, data_key: column_8, $$hashKey: 'object:5090'}
+        - {id: XADEEP, title: Column 9, data_key: column_9, $$hashKey: 'object:5092'}
+        - {id: KTPMCJ, title: Column 10, data_key: column_10, $$hashKey: 'object:5094'}
+        auto_header: true
+        tooltip: ''
+        border: ''
+        foreground: ''
+        rows_per_page: 20
+        visible: true
+        wrap_on: never
+        show_page_controls: true
+        spacing_above: small
+        spacing_below: small
+        background: ''
+      name: data_grid_2
+      layout_properties: {grid_position: 'ULTICR,DOSRUB'}
+      components:
+      - type: RepeatingPanel
+        properties: {spacing_above: none, spacing_below: none, item_template: Test.RowTemplate7}
+        name: repeating_panel_2
+        layout_properties: {}
 - type: FlowPanel
   properties: {}
   name: navbar_links
