Edited settings, Analysis, Data and Form1; Deleted Analysis.ItemTemplate1

--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -6,7 +6,7 @@ container:
   data_bindings: []
 components:
 - type: ColumnPanel
-  properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
+  properties: {role: outlined-card, tooltip: '', border: '', foreground: '', visible: true,
     wrap_on: mobile, col_spacing: huge, spacing_above: none, col_widths: '{"RVEUVV":30,"IBUKDW":30}',
     spacing_below: none, background: ''}
   name: content_panel
