--- a/client_code/Analysis/form_template.yaml
+++ b/client_code/Analysis/form_template.yaml
@@ -19,14 +19,34 @@ components:
     components:
     - type: Label
       properties: {}
-      name: label_1
+      name: label_L
       layout_properties: {grid_position: 'GVPBXS,ZSAFDF'}
     - type: DataGrid
       properties:
+        role: null
         columns:
-        - {id: KMJPWY, title: Column 1, data_key: column_1}
-        - {id: WZIVFJ, title: Column 2, data_key: column_2}
-        - {id: ASTDNJ, title: Column 3, data_key: column_3}
+        - {id: KMJPWY, title: '', data_key: '', $$hashKey: 'object:34633'}
+        - {id: WZIVFJ, title: S1, data_key: '', $$hashKey: 'object:34634'}
+        - {id: HNNSYW, title: S2, data_key: '', $$hashKey: 'object:60469'}
+        - {id: ASTDNJ, title: D1, data_key: '', $$hashKey: 'object:34635'}
+        - {id: GBPAUZ, title: D2, data_key: '', $$hashKey: 'object:34677'}
+        - {id: PGSRXM, title: P1, data_key: '', $$hashKey: 'object:34679'}
+        - {id: XNFFYZ, title: P2, data_key: '', $$hashKey: 'object:34681'}
+        - {id: TPRRQJ, title: M1, data_key: '', $$hashKey: 'object:34683'}
+        - {id: QCGXLY, title: M2, data_key: '', $$hashKey: 'object:34685'}
+        - {id: LEIYCZ, title: A1, data_key: '', $$hashKey: 'object:34687'}
+        - {id: CJXBWR, title: A2, data_key: '', $$hashKey: 'object:34689'}
+        auto_header: true
+        tooltip: ''
+        border: ''
+        foreground: ''
+        rows_per_page: 20
+        visible: true
+        wrap_on: never
+        show_page_controls: true
+        spacing_above: small
+        spacing_below: small
+        background: ''
       name: summary_data
       layout_properties: {grid_position: 'BMFZKP,ZQTYRJ'}
       components:
@@ -43,7 +63,7 @@ components:
     components:
     - type: Label
       properties: {}
-      name: label_2
+      name: label_R
       layout_properties: {grid_position: 'ZCLYNA,JCQPUD'}
     - type: DataGrid
       properties:
