--- a/client_code/Analysis/RowTemplate5/form_template.yaml
+++ b/client_code/Analysis/RowTemplate5/form_template.yaml
@@ -2,9 +2,8 @@ container: {type: DataRowPanel}
 components:
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
-    text: Average, font_size: 20, font: '', spacing_above: small, icon_align: left,
-    spacing_below: small, italic: false, background: '', bold: false, underline: false,
-    icon: ''}
+    text: '', font_size: 20, font: '', spacing_above: small, icon_align: left, spacing_below: small,
+    italic: false, background: '', bold: false, underline: false, icon: ''}
   name: 'no'
   layout_properties: {column: KMJPWY}
 - type: Label
