--- a/client_code/Filter/form_template.yaml
+++ b/client_code/Filter/form_template.yaml
@@ -99,7 +99,7 @@ components:
   event_bindings: {change: t_to_change}
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
-    text: Day ZONE, font_size: null, font: '', spacing_above: none, icon_align: left,
+    text: Time ZONE, font_size: null, font: '', spacing_above: none, icon_align: left,
     spacing_below: none, italic: false, background: '', bold: false, underline: false,
     icon: ''}
   name: d_zone
