--- a/client_code/Filter_a/form_template.yaml
+++ b/client_code/Filter_a/form_template.yaml
@@ -25,11 +25,28 @@ components:
     layout_properties: {}
   - type: TextBox
     properties: {role: null, align: left, hide_text: false, tooltip: Enter integer Number,
-      placeholder: '', border: '', enabled: true, foreground: '', visible: true, text: '',
-      font_size: null, font: '', spacing_above: small, type: text, spacing_below: small,
+      placeholder: '#', border: '', enabled: true, foreground: '', visible: true,
+      text: '', font_size: null, font: '', spacing_above: small, type: text, spacing_below: small,
       italic: false, background: '', bold: false, underline: false}
     name: number
     layout_properties: {width: 50, expand: false}
+  - type: Label
+    properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
+      visible: true, text: '=', font_size: 20, font: '', spacing_above: small, icon_align: left,
+      spacing_below: small, italic: false, background: '', bold: false, underline: false,
+      icon: ''}
+    name: eq_lbl
+    layout_properties: {}
+  - type: RichText
+    properties: {role: null, align: left, tooltip: '', enable_slots: true, border: '',
+      foreground: '', visible: true, font_size: 20, content: 3 month, font: '', spacing_above: small,
+      spacing_below: small, data: null, background: '', format: plain_text}
+    name: period
+    layout_properties: {}
+  - type: Label
+    properties: {}
+    name: t_unit
+    layout_properties: {}
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
     text: Step, font_size: null, font: '', spacing_above: small, icon_align: left,
@@ -111,27 +128,27 @@ components:
   components:
   - type: DatePicker
     properties: {role: null, align: left, max_date: '', pick_time: false, tooltip: '',
-      placeholder: Date FROM, border: '', enabled: true, foreground: '', visible: true,
+      placeholder: START Period 1, border: '', enabled: true, foreground: '', visible: true,
       font_size: null, font: '', spacing_above: none, spacing_below: none, italic: false,
       date: '', min_date: '', background: '', bold: false, underline: false, format: '%Y/%m/%d'}
-    name: t_from
+    name: period_1
     layout_properties: {}
     data_bindings:
     - {property: date, code: 'self.item[''from_date'']', writeback: true}
     event_bindings: {change: t_from_change}
 - type: DatePicker
   properties: {role: null, align: left, max_date: '', pick_time: false, tooltip: '',
-    placeholder: Date TO, border: '', enabled: true, foreground: '', visible: true,
+    placeholder: START Period 2, border: '', enabled: true, foreground: '', visible: true,
     font_size: null, font: '', spacing_above: none, spacing_below: none, italic: false,
     date: '', min_date: '', background: '', bold: false, underline: false, format: '%Y/%m/%d'}
-  name: t_to
+  name: perioid_2
   layout_properties: {grid_position: 'AXUESG,RIPMES'}
   data_bindings:
   - {property: date, code: 'self.item[''to_date'']', writeback: true}
   event_bindings: {change: t_to_change}
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
-    text: Day ZONE, font_size: null, font: '', spacing_above: none, icon_align: left,
+    text: Time ZONE, font_size: null, font: '', spacing_above: none, icon_align: left,
     spacing_below: none, italic: false, background: '', bold: false, underline: false,
     icon: ''}
   name: d_zone_lbl
