--- a/client_code/Filter_a/form_template.yaml
+++ b/client_code/Filter_a/form_template.yaml
@@ -86,10 +86,10 @@ components:
     event_bindings: {clicked: m_clicked}
   - type: RadioButton
     properties: {role: null, selected: false, align: left, tooltip: '', border: '',
-      enabled: true, foreground: '', value: '', visible: true, text: 3m, font_size: null,
+      enabled: true, foreground: '', value: '', visible: true, text: 2h, font_size: null,
       font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
       bold: false, group_name: fix_range, underline: false}
-    name: m3
+    name: h2
     layout_properties: {grid_position: 'JJCFHV,LXPTVL'}
     event_bindings: {clicked: m3_clicked}
 - type: FlowPanel
@@ -100,10 +100,10 @@ components:
   components:
   - type: RadioButton
     properties: {role: null, selected: false, align: left, tooltip: '', border: '',
-      enabled: true, foreground: '', value: '', visible: true, text: range, font_size: null,
+      enabled: true, foreground: '', value: '', visible: true, text: 6h, font_size: null,
       font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
       bold: false, group_name: fix_range, underline: false}
-    name: r
+    name: h6
     layout_properties: {grid_position: 'JJCFHV,IQWZLZ'}
     event_bindings: {clicked: r_clicked}
   - type: CheckBox
@@ -135,7 +135,7 @@ components:
     layout_properties: {}
     data_bindings:
     - {property: date, code: 'self.item[''from_date'']', writeback: true}
-    event_bindings: {change: t_from_change}
+    event_bindings: {change: period_1_change}
 - type: DatePicker
   properties: {role: null, align: left, max_date: '', pick_time: false, tooltip: '',
     placeholder: START Period 2, border: '', enabled: true, foreground: '', visible: true,
@@ -145,7 +145,7 @@ components:
   layout_properties: {grid_position: 'AXUESG,RIPMES'}
   data_bindings:
   - {property: date, code: 'self.item[''to_date'']', writeback: true}
-  event_bindings: {change: t_to_change}
+  event_bindings: {change: period_2_change}
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
     text: Time ZONE, font_size: null, font: '', spacing_above: none, icon_align: left,
