--- a/client_code/Filter_a/form_template.yaml
+++ b/client_code/Filter_a/form_template.yaml
@@ -26,10 +26,11 @@ components:
   - type: TextBox
     properties: {role: null, align: left, hide_text: false, tooltip: Enter integer Number,
       placeholder: '#', border: '', enabled: true, foreground: '', visible: true,
-      text: '', font_size: null, font: '', spacing_above: small, type: text, spacing_below: small,
+      text: '', font_size: 20, font: '', spacing_above: small, type: number, spacing_below: small,
       italic: false, background: '', bold: false, underline: false}
     name: number
     layout_properties: {width: 50, expand: false}
+    event_bindings: {change: number_change, pressed_enter: number_pressed_enter}
   - type: Label
     properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
       visible: true, text: '=', font_size: 20, font: '', spacing_above: small, icon_align: left,
@@ -37,10 +38,8 @@ components:
       icon: ''}
     name: eq_lbl
     layout_properties: {}
-  - type: RichText
-    properties: {role: null, align: left, tooltip: '', enable_slots: true, border: '',
-      foreground: '', visible: true, font_size: 20, content: 3 month, font: '', spacing_above: small,
-      spacing_below: small, data: null, background: '', format: plain_text}
+  - type: Label
+    properties: {}
     name: period
     layout_properties: {}
   - type: Label
@@ -91,7 +90,7 @@ components:
       bold: false, group_name: fix_range, underline: false}
     name: h2
     layout_properties: {grid_position: 'JJCFHV,LXPTVL'}
-    event_bindings: {clicked: m3_clicked}
+    event_bindings: {clicked: h2_clicked}
 - type: FlowPanel
   properties: {role: null, spacing: tiny, align: left, tooltip: '', border: '', foreground: '',
     visible: true, spacing_above: none, spacing_below: none, background: ''}
@@ -105,7 +104,7 @@ components:
       bold: false, group_name: fix_range, underline: false}
     name: h6
     layout_properties: {grid_position: 'JJCFHV,IQWZLZ'}
-    event_bindings: {clicked: r_clicked}
+    event_bindings: {clicked: h6_clicked}
   - type: CheckBox
     properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
       foreground: '', allow_indeterminate: false, visible: true, text: ALL rows, font_size: null,
