--- a/client_code/Filter_a/form_template.yaml
+++ b/client_code/Filter_a/form_template.yaml
@@ -133,8 +133,7 @@ components:
       date: '', min_date: '', background: '', bold: false, underline: false, format: '%Y/%m/%d'}
     name: period_1
     layout_properties: {}
-    data_bindings:
-    - {property: date, code: 'self.item[''from_date'']', writeback: true}
+    data_bindings: []
     event_bindings: {change: period_1_change}
 - type: DatePicker
   properties: {role: null, align: left, max_date: '', pick_time: false, tooltip: '',
@@ -143,8 +142,7 @@ components:
     date: '', min_date: '', background: '', bold: false, underline: false, format: '%Y/%m/%d'}
   name: perioid_2
   layout_properties: {grid_position: 'AXUESG,RIPMES'}
-  data_bindings:
-  - {property: date, code: 'self.item[''to_date'']', writeback: true}
+  data_bindings: []
   event_bindings: {change: period_2_change}
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
@@ -206,5 +204,12 @@ components:
     italic: false, background: '', bold: false, underline: false, icon: ''}
   name: msg
   layout_properties: {grid_position: 'YIHNMT,WHMSIC'}
+- type: Button
+  properties: {role: outlined-button, align: center, tooltip: '', border: '', enabled: true,
+    foreground: '', visible: true, text: Start button, font_size: null, font: '',
+    spacing_above: small, icon_align: left, spacing_below: small, italic: false, background: '',
+    bold: false, underline: false, icon: ''}
+  name: outlined_button_1
+  layout_properties: {grid_position: 'FDGNJA,KRTBVQ'}
 is_package: true
 custom_component: true
