--- a/client_code/Filter_a/form_template.yaml
+++ b/client_code/Filter_a/form_template.yaml
@@ -209,7 +209,8 @@ components:
     foreground: '', visible: true, text: Start button, font_size: null, font: '',
     spacing_above: small, icon_align: left, spacing_below: small, italic: false, background: '',
     bold: false, underline: false, icon: ''}
-  name: outlined_button_1
+  name: start_button
   layout_properties: {grid_position: 'FDGNJA,KRTBVQ'}
+  event_bindings: {click: start_button_click}
 is_package: true
 custom_component: true
