--- a/client_code/Filter_a/form_template.yaml
+++ b/client_code/Filter_a/form_template.yaml
@@ -40,11 +40,17 @@ components:
     name: eq_lbl
     layout_properties: {}
   - type: Label
-    properties: {}
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: '', font_size: 20, font: '', spacing_above: small, icon_align: left,
+      spacing_below: small, italic: false, background: '', bold: true, underline: false,
+      icon: ''}
     name: period
     layout_properties: {}
   - type: Label
-    properties: {}
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: '', font_size: 20, font: '', spacing_above: small, icon_align: left,
+      spacing_below: small, italic: false, background: '', bold: true, underline: false,
+      icon: ''}
     name: t_unit
     layout_properties: {}
 - type: Label
