Edited Filter_a, Analysis, Data and Analysis.RowTemplate5

--- a/client_code/Filter_a/form_template.yaml
+++ b/client_code/Filter_a/form_template.yaml
@@ -16,7 +16,7 @@ components:
     properties: {}
     name: uom
     layout_properties: {}
-    event_bindings: {change: uom_change}
+    event_bindings: {change: uom_change, show: uom_show}
   - type: Label
     properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
       visible: true, text: '  *  ', font_size: 20, font: '', spacing_above: small,
