--- a/client_code/Analysis/RowTemplate3/form_template.yaml
+++ b/client_code/Analysis/RowTemplate3/form_template.yaml
@@ -89,8 +89,8 @@ components:
 - type: Label
   properties: {role: 0height, align: left, tooltip: '', border: '', foreground: '',
     visible: true, text: '', font_size: null, font: '', spacing_above: none, icon_align: left,
-    spacing_below: none, italic: false, background: '', bold: false, underline: false,
-    icon: ''}
+    spacing_below: none, italic: false, background: 'theme:Primary Container', bold: false,
+    underline: false, icon: ''}
   name: s1
   layout_properties: {column: RDIIXA}
 is_package: true
