--- a/client_code/Analysis/form_template.yaml
+++ b/client_code/Analysis/form_template.yaml
@@ -12,7 +12,7 @@ components:
   components:
   - type: ColumnPanel
     properties: {role: elevated-card, tooltip: '', border: '', foreground: '', visible: true,
-      wrap_on: mobile, col_spacing: medium, spacing_above: none, col_widths: '{}',
+      wrap_on: mobile, col_spacing: medium, spacing_above: none, col_widths: '{"ZSAFDF":25,"SMKEEC":20,"DRTKPD":5,"VDBNVA":10}',
       spacing_below: small, background: ''}
     name: column_panel_L
     layout_properties: {grid_position: 'DOXDCO,TVSOTF', full_width_row: true}
