--- a/client_code/Analysis/form_template.yaml
+++ b/client_code/Analysis/form_template.yaml
@@ -6,12 +6,12 @@ components:
 - type: ColumnPanel
   properties: {role: outlined-card, tooltip: '', border: '', foreground: '', visible: true,
     wrap_on: mobile, col_spacing: medium, spacing_above: none, col_widths: '{}', spacing_below: small,
-    background: ''}
+    background: 'theme:Primary Overlay 1'}
   name: content_panel
   layout_properties: {slot: default}
   components:
   - type: ColumnPanel
-    properties: {role: elevated-card, tooltip: '', border: '', foreground: '', visible: true,
+    properties: {role: outlined-card, tooltip: '', border: '', foreground: '', visible: true,
       wrap_on: mobile, col_spacing: medium, spacing_above: none, col_widths: '{"ZSAFDF":25,"SMKEEC":20,"DRTKPD":5,"VDBNVA":10}',
       spacing_below: small, background: ''}
     name: column_panel_L
@@ -139,12 +139,16 @@ components:
   components:
   - type: Button
     properties: {role: filled-button, align: center, tooltip: '', border: '', enabled: true,
-      foreground: '', visible: true, text: back, font_size: null, font: '', spacing_above: small,
+      foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
       icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-      underline: false, icon: ''}
+      underline: false, icon: 'fa:arrow-left'}
     name: back
     layout_properties: {grid_position: 'BEJSSM,EPUQNY'}
     event_bindings: {click: back_click}
+  - type: Button
+    properties: {text: button_1}
+    name: button_1
+    layout_properties: {grid_position: 'BEJSSM,DXILQA'}
   - type: form:Filter_a
     properties: {}
     name: filter_a_1
