--- a/client_code/Filter_a/form_template.yaml
+++ b/client_code/Filter_a/form_template.yaml
@@ -30,7 +30,7 @@ components:
       text: '', font_size: 20, font: '', spacing_above: small, type: number, spacing_below: small,
       italic: false, background: '', bold: false, underline: false}
     name: number
-    layout_properties: {width: 50, expand: false}
+    layout_properties: {width: 64, expand: false}
     event_bindings: {change: number_change, pressed_enter: number_pressed_enter}
   - type: Label
     properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
@@ -112,6 +112,10 @@ components:
     name: h6
     layout_properties: {grid_position: 'JJCFHV,IQWZLZ'}
     event_bindings: {clicked: h6_clicked}
+  - type: RadioButton
+    properties: {text: radio_button_1}
+    name: radio_button_1
+    layout_properties: {}
   - type: CheckBox
     properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
       foreground: '', allow_indeterminate: false, visible: true, text: ALL rows, font_size: null,
