--- a/client_code/Filter_a/form_template.yaml
+++ b/client_code/Filter_a/form_template.yaml
@@ -113,9 +113,13 @@ components:
     layout_properties: {grid_position: 'JJCFHV,IQWZLZ'}
     event_bindings: {clicked: h6_clicked}
   - type: RadioButton
-    properties: {text: radio_button_1}
-    name: radio_button_1
+    properties: {role: null, selected: false, align: left, tooltip: '', border: '',
+      enabled: true, foreground: '', value: '', visible: true, text: '0', font_size: null,
+      font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
+      bold: false, group_name: fix_range, underline: false}
+    name: h0
     layout_properties: {}
+    event_bindings: {clicked: h0_clicked}
   - type: CheckBox
     properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
       foreground: '', allow_indeterminate: false, visible: true, text: ALL rows, font_size: null,
