--- a/client_code/Filter_a/form_template.yaml
+++ b/client_code/Filter_a/form_template.yaml
@@ -120,9 +120,17 @@ components:
     name: h0
     layout_properties: {}
     event_bindings: {clicked: h0_clicked}
+  - type: RadioButton
+    properties: {role: null, selected: false, align: left, tooltip: '', border: '',
+      enabled: true, foreground: '', value: '', visible: true, text: а, font_size: null,
+      font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
+      bold: false, group_name: fix_range, underline: false}
+    name: ha
+    layout_properties: {}
+    event_bindings: {clicked: ha_clicked}
   - type: CheckBox
     properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
-      foreground: '', allow_indeterminate: false, visible: true, text: ALL rows, font_size: null,
+      foreground: '', allow_indeterminate: false, visible: true, text: ALL, font_size: null,
       font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
       bold: false, checked: false, underline: false}
     name: all
